--- a/index.html
+++ b/index.html
@@ -5,9 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather app</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<div class="container"></div>
 <body>
-    <script href="script.js"></script>
+
+<div class="card">
+    <div class="name">
+            <h1>WEATHER APP</h1>
+            <p class="tagline">Get real-time weather updates</p>
+        </div>
+    <div class="search">
+        <input type="text" placeholder="enter city name " spellcheck="false">
+        <button><img src="images/search.png"></button>
+    </div>
+    <div class="error">
+        <p>invalid city name</p>
+    </div>
+    <div class="weather">
+        <img src="images/rain.png" alt="rain" class="weather-icon">
+        <h1 class="temp">34°C</h1>
+        <h2 class="city">Hydrabad</h2>
+        <div class="details">
+            <div class="col">
+                <img src="images/wind.png" alt="">
+                <div>
+                <p class="wind">15 km/h</p>
+                <p>Wind speed</p>
+            </div>
+        </div>
+            <div class="col">
+                <img src="images/humidity.png">
+                <div>
+                    <p class="humidity">50%</p>
+                    <p>Humidity</p>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="footer">
+        <span>Designed by </span>
+        <span> Mayank Soni</span>
+        <div class="hearts"></div>
+    </div>
+
+    
+    <script src="script.js"></script>
 </body>
 </html>
